<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/menu_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300"
    tools:context="ca.uqac.florentinth.speakerauthentication.MenuActivity">

    <FrameLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_indigo_500"
        android:elevation="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="16dp"
            android:textColor="@color/md_white_1000"
            android:textSize="22dp"/>

        <Button
            android:id="@+id/btn_logout"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/btn_logout"
            android:textColor="@color/md_light_blue_500"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_username"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <RelativeLayout
            android:id="@+id/layout_decibel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/decibel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="80dB"
                android:textColor="@color/md_indigo_500"
                android:textSize="50dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_decibel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp">

            <Button
                android:id="@+id/btn_training"
                style="@style/RaisedButtonLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_training"
                android:textColor="@color/md_white_1000"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_recognition"
                style="@style/RaisedButtonLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_training"
                android:layout_marginTop="10dp"
                android:text="@string/btn_recognition"
                android:textColor="@color/md_white_1000"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_settings"
                style="@style/RaisedButtonLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_recognition"
                android:layout_marginTop="10dp"
                android:text="@string/btn_settings"
                android:textColor="@color/md_white_1000"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_location"
                style="@style/RaisedButtonLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_settings"
                android:layout_marginTop="10dp"
                android:text="@string/btn_location"
                android:textColor="@color/md_white_1000"
                android:textSize="18dp"/>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>