<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_indigo_500"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uqac.florentinth.speakerauthentication.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_white"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="36dp"
        android:theme="@style/LoginInput">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textColor="@color/md_light_blue_500"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/password"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:theme="@style/LoginInput">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/md_light_blue_500"/>

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/visibility"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="49dp"
            android:src="@drawable/eye_white"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/RaisedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="36dp"
        android:text="@string/btn_login"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/btn_new_account"
        style="@style/RaisedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/btn_new_account"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"/>

</RelativeLayout>
